Non-local keyboards don't update scroll view parameters https://bugs.webkit.org/show_bug.cgi?id=143791 <rdar://problem/18974020>

Reviewed by Enrica Casucci.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _shouldUpdateKeyboardWithInfo:]):
(-[WKWebView _keyboardWillChangeFrame:]):
(-[WKWebView _keyboardWillShow:]):
Make sure that we update scroll view parameters (obscured insets, etc.)
if we have a non-local keyboard, in addition to the cases where we have an assisted node.


Canonical link: https://commits.webkit.org/161796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182851 268f45cc-cd09-0410-ab3c-d52691b4dbfc